--- a/input.html
+++ b/input.html
@@ -9,7 +9,7 @@
     <h3>Войти</h3>
     <p>
         <b>Почта</b><br>
-        <input type="text" class="inp_email">
+        <input type="email" class="inp_email">
     <p>
     <p>
         <b>Пароль</b><br>
@@ -17,6 +17,6 @@
     </p>
         <button class="btn">Войти на сайт</button>
     <p>Впервые на нашем сайте?</p>
-    <a href="#">Зарегистрируйтесь</a>
+    <a href="registration.html">Зарегистрируйтесь</a>
 </body>
 </html>
