add decoration for autorisation form

--- a/advert.html
+++ b/advert.html
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="header-login">
                 <a href="advert.html" class="header-name">AMI</a>
-                <a href="input.html">Войти</a>
+                <a href="enter.html" class="header-autoris">Войти</a>
                 <a href="#" class="btn">Добавить объявление</a>
                 </div>
             </div>
@@ -32,14 +32,15 @@
         </div>
     </main>
     <footer>
-        <div class="footer_left">
+        <div class="contact">
             <h3>Контакты</h3>
             <p>Казань, ул. Большая Красная, 55</p>
             <p>КНИТУ-КАИ им.Туполева А.Н.</p>
             <p>Кафедра ПМИ, 3 этаж.</p>
             <p>ежедневно 8:00-22:00</p>
         </div>
-        <div class="footer_right">
+        <div class="sitemap">
+            <h3>Информация о сайте</h3>
             <p><a href="rules.html">Правила подачи обяъвления</a></p>
             <p><a href="#">Тарифы</a></p>
             <p><a href="#">Пользовательское соглашение</a></p>
