--- a/registration.html
+++ b/registration.html
@@ -19,6 +19,6 @@
     <input type="checkbox" name="Receipt">
     <label for="Receipt">Я соглашаюсь с <a href="rules.html">правилами использования сервиса</a>, а также с передачей и обработкой моих данных.</label>
     <p>Вы уже зарегистрированы?</p>
-    <a href="input.html">Войдите на сайт</a>
+    <a href="enter.html">Войдите на сайт</a>
 </body>
 </html>
