final decoration for autorisation

--- a/registration.html
+++ b/registration.html
@@ -3,22 +3,19 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Регистрация</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h3>Регистрация</h3>
-    <p>
-        <b>Почта</b><br>
-        <input type="email" class="inp_email">
-    <p>
-    <p>
-        <b>Пароль</b><br>
-        <input type="text" class="inp_pass">
-    </p>
-    <button class="btn">Зарегистрироваться</button>
-    <input type="checkbox" name="Receipt">
-    <label for="Receipt">Я соглашаюсь с <a href="rules.html">правилами использования сервиса</a>, а также с передачей и обработкой моих данных.</label>
-    <p>Вы уже зарегистрированы?</p>
-    <a href="enter.html">Войдите на сайт</a>
+    <div class="auto">
+        <h1>Регистрация</h1>
+        <input type="email" class="inp_email" placeholder="email">
+        <input type="text" class="inp_pass" placeholder="password">
+        <input type="submit" value="Зарегистрироваться">
+        <input type="checkbox" name="Receipt">
+        <label for="Receipt">Я соглашаюсь с <a href="rules.html">правилами использования сервиса</a>, а также с передачей и обработкой моих данных.</label>
+        <p>Вы уже зарегистрированы?</p>
+        <a href="enter.html">Войдите на сайт</a>
+    </div>
 </body>
 </html>
