add side-menu rules

--- a/advert.html
+++ b/advert.html
@@ -41,17 +41,20 @@
         
     <main>
         <div class="container">
-            <div class="menu">
-            <h1>Объявления</h1>
-        </div>
-        <ul>
-            <li>Недвижимость</li>
-            <li>Транспорт</li>
-            <li>Детский мир</li>
-            <li>Услуги</li>
-            <li>Спорт и путешествия</li>
-            <li>Дом и дача</li>
-        </ul>
+            <div class="side-menu">
+                <div class="side-name">
+                <h1>Объявления</h1>
+                </div>
+                <ul>
+                    <li><img src="house.png" alt="">Недвижимость</li>
+                    <li><img src="car2.png">Транспорт</li>
+                    <li><img src="kids.png">Детский мир</li>
+                    <li><img src="service.png">Услуги</li>
+                    <li><img src="travel.png">Спорт и путешествия</li>
+                    <li><img src="pets.png">Животные</li>
+
+                </ul>
+            </div>
         </div>
     </main>
     <footer>
@@ -66,7 +69,7 @@
             <h3>Информация о сайте</h3>
             <p><a href="rules.html">Правила подачи обяъвления</a></p>
             <p><a href="#">Тарифы</a></p>
-            <p><a href="#">Пользовательское соглашение</a></p>
+            <p><a href="rules.html">Пользовательское соглашение</a></p>
             <p><a href="#">Техподдержка</a></p>
         </div>
     </footer>
