--- a/enter.html
+++ b/enter.html
@@ -9,13 +9,19 @@
 </head>
 <body>
     <div class="auto">
-    <h1>Войти</h1>
-    <input type="email" class="inp_email" placeholder="email">
-    <input type="text" class="inp_pass" placeholder="password">
-    <input type="submit" value="Авторизоваться">
-    <!--<button class="btn">Войти на сайт</button>-->
-    <p>Впервые на нашем сайте?</p>
-    <a href="registration.html">Зарегистрируйтесь</a>
+        <h1>Войти</h1>
+        <input type="email" class="inp_email" placeholder="email">
+        <input type="text" class="inp_pass" placeholder="password">
+        <form action="personal_account.html" method="post">
+            <input type="submit" value="Авторизоваться" />
+        </form>
+        <!--<input type="submit" value="Авторизоваться">
+        <br>
+        <a href="personal_account.html"></a>
+        </br>-->
+        <!--<button class="btn">Войти на сайт</button>-->
+        <p>Впервые на нашем сайте?</p>
+        <a href="registration.html">Зарегистрируйтесь</a>
     </div>
 </body>
 </html>
