--- a/rules.html
+++ b/rules.html
@@ -3,9 +3,89 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Пользовательское соглашение</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header-login">
+                <a href="advert.html" class="header-name">AMI</a>
+                <img src="place.png" class="img_place" width="23" height="23">
+                <select id="city" class="cities">
+                    <option>Москва</option>
+                    <option>Санкт-Петербург</option>
+                    <option>Новороссийск</option>
+                    <option>Екатеринбург</option>
+                    <option>Казань</option>
+                    <option>Нижний Новгород</option>
+                    <option>Челябинск</option>
+                    <option>Самара</option>
+                    <option>Красноярск</option>
+                    <option>Пермь</option>
+                    <option>Волгоград</option>
+                    <option>Чебоксары</option>
+                </select>
+                <a href="enter.html" class="header-autoris">Войти</a>
+                <a href="#" class="btn">Добавить объявление</a>
+            </div>
+        </div>
+        <!--<a href="input.html">Войти</a>
+        <button class="btn">Добавить объявление +</button>-->
+
+        <script>
+            var city = document.querySelection('#city');
+            city.addEventListener('change', function () {
+                console.log(this.value);
+            });
+        </script>
+    </header>
+    <main>
+        <div class="container">
+            <h1>Пользовательское соглашение</h1>
+            <h4>
+                Настоящее Пользовательское соглашение регулирует отношения между доской объявления «AMI» («Компания») и пользователем сети Интернет («Пользователь»), возникающие при использовании интернет-ресурса, на указанных в Пользовательском соглашении условиях.
+            </h4>
+            <details>
+                <summary>1. Термины</summary>
+                <p>Компания — доска бесплатных объявлений «AMI»</p>
+                <p>Пользователь — посетитель ресурсов сети Интернет, в том числе «AMI».</p>
+                <p>Пользовательское соглашение — настоящее соглашение, Правила размещения объявлений и иные правила и документы, регламентирующие работу «AMI» или определяющие порядок использования Сервисов, опубликованные на Сайте.</p>
+                <p>Сервисы — функциональные возможности, службы, услуги, инструменты, доступные для Пользователей на «AMI».</p>
+                <p>Товар — любой товар, продукт, услуга, предложение о работе или иное предложение, в отношении которого Пользователь размещает на «AMI» Объявление.</p>
+                <p> Объявление — информационное сообщение с предложением о Товаре (включая контактную информацию, фотографии и любую сопутствующую информацию), размещаемое Пользователем на «AMI», адресованное неопределенному кругу лиц.</p>
+                <p>Продавец — Пользователь, размещающий на «EDC.SALE» Объявление с предложением заключить сделку в отношении Товара.</p>
+                <p>Покупатель — Пользователь, осуществляющий просмотр размещенного Продавцом Объявления, взаимодействие с Продавцом в отношении Товара и/или заключающий сделку с Продавцом.</p>
+                <p>Учетные данные — уникальный логин (указанные Пользователем адрес электронной почты) и пароль, создаваемые самостоятельно Пользователем в процессе Регистрации на Сайте либо измененные в дальнейшем Пользователем через Личный кабинет или иным, указанным Компанией способом, используемые для доступа в Личный кабинет после Регистрации Пользователя на «AMI».</p>
+                <p>Личный кабинет — персональный раздел Пользователя на «AMI», связанный с учетной записью Пользователя на Сайте, в котором Пользователю доступно управление отдельными Сервисами «AMI», в том числе их заказ, подключение / отключение, на предложенных Компанией условиях.</p>
+                <p>Регистрация — совокупность действий Пользователя в соответствии с указанными на «EDC.SALE» инструкциями, включая предоставление Учетных данных и иной информации, совершаемых Пользователем с использованием специальной формы пользовательского интерфейса «AMI» в целях формирования Личного кабинета и получения доступа к отдельным Сервисам «AMI».</p>
+            </details>
+            <details>
+                <summary>2. Регистрация на сайте</summary>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </details>
+        </div>
+    </main>
+    <footer>
+        <div class="contact">
+            <h3>Контакты</h3>
+            <p>Казань, ул. Большая Красная, 55</p>
+            <p>КНИТУ-КАИ им.Туполева А.Н.</p>
+            <p>Кафедра ПМИ, 3 этаж.</p>
+            <p>ежедневно 8:00-22:00</p>
+        </div>
+        <div class="sitemap">
+            <h3>Информация о сайте</h3>
+            <p><a href="rules.html">Правила подачи обяъвления</a></p>
+            <p><a href="#">Тарифы</a></p>
+            <p><a href="#">Пользовательское соглашение</a></p>
+            <p><a href="#">Техподдержка</a></p>
+        </div>
+    </footer>
 </body>
 </html>
