--- a/rules.html
+++ b/rules.html
@@ -46,6 +46,7 @@
             <h4>
                 Настоящее Пользовательское соглашение регулирует отношения между доской объявления «AMI» («Компания») и пользователем сети Интернет («Пользователь»), возникающие при использовании интернет-ресурса, на указанных в Пользовательском соглашении условиях.
             </h4>
+            <div class="rules_text">
             <details>
                 <summary>1. Термины</summary>
                 <p>Компания — доска бесплатных объявлений «AMI»</p>
@@ -62,6 +63,21 @@
             </details>
             <details>
                 <summary>2. Регистрация на сайте</summary>
+                <p>Компания — доска бесплатных объявлений «AMI»</p>
+                <p>Пользователь — посетитель ресурсов сети Интернет, в том числе «AMI».</p>
+                <p>Пользовательское соглашение — настоящее соглашение, Правила размещения объявлений и иные правила и документы, регламентирующие работу «AMI» или определяющие порядок использования Сервисов, опубликованные на Сайте.</p>
+                <p>Сервисы — функциональные возможности, службы, услуги, инструменты, доступные для Пользователей на «AMI».</p>
+                <p>Товар — любой товар, продукт, услуга, предложение о работе или иное предложение, в отношении которого Пользователь размещает на «AMI» Объявление.</p>
+                <p> Объявление — информационное сообщение с предложением о Товаре (включая контактную информацию, фотографии и любую сопутствующую информацию), размещаемое Пользователем на «AMI», адресованное неопределенному кругу лиц.</p>
+                <p>Продавец — Пользователь, размещающий на «EDC.SALE» Объявление с предложением заключить сделку в отношении Товара.</p>
+                <p>Покупатель — Пользователь, осуществляющий просмотр размещенного Продавцом Объявления, взаимодействие с Продавцом в отношении Товара и/или заключающий сделку с Продавцом.</p>
+                <p>Учетные данные — уникальный логин (указанные Пользователем адрес электронной почты) и пароль, создаваемые самостоятельно Пользователем в процессе Регистрации на Сайте либо измененные в дальнейшем Пользователем через Личный кабинет или иным, указанным Компанией способом, используемые для доступа в Личный кабинет после Регистрации Пользователя на «AMI».</p>
+                <p>Личный кабинет — персональный раздел Пользователя на «AMI», связанный с учетной записью Пользователя на Сайте, в котором Пользователю доступно управление отдельными Сервисами «AMI», в том числе их заказ, подключение / отключение, на предложенных Компанией условиях.</p>
+                <p>Регистрация — совокупность действий Пользователя в соответствии с указанными на «EDC.SALE» инструкциями, включая предоставление Учетных данных и иной информации, совершаемых Пользователем с использованием специальной формы пользовательского интерфейса «AMI» в целях формирования Личного кабинета и получения доступа к отдельным Сервисам «AMI».</p>
+
+            </details>
+            <details>
+                <summary>3. Обязательства Пользователя</summary>
                 <p></p>
                 <p></p>
                 <p></p>
@@ -69,6 +85,7 @@
                 <p></p>
                 <p></p>
             </details>
+            </div>
         </div>
     </main>
     <footer>
