--- a/personal_account.html
+++ b/personal_account.html
@@ -26,7 +26,7 @@
                     <option>Волгоград</option>
                     <option>Чебоксары</option>
                 </select>
-                <a href="enter.html" class="header-autoris">Войти</a>
+                <a href="advert" class="header-autoris">Выйти</a>
                 <a href="#" class="btn">Добавить объявление</a>
             </div>
         </div>
@@ -45,9 +45,8 @@
             <div class="content">
                 <div class="cabinet_title">Мой кабинет</div>
                 <ul>
-                    <li><a href="#">Объявления</a></li>
-                    <li><a href="#">Сообщения</a></li>
-                    <li><a href="#">Выход</a></li>
+                <li><a href="advert.html">Объявления</a></li>
+                <li><a href="#">Сообщения</a></li>
                 </ul>
             </div>
         </div>
