swithing between tabs in personal account

--- a/advert.html
+++ b/advert.html
@@ -25,7 +25,7 @@
                     <option>Чебоксары</option>
                 </select>
                 <a href="enter.html" class="header-autoris">Войти</a>
-                <a href="#" class="btn">Добавить объявление</a>
+                <a href="AddAdvert.html" class="btn">Добавить объявление</a>
             </div>
         </div>
         <!--<a href="input.html">Войти</a>
@@ -56,20 +56,26 @@
             </div>
             <div class="all_advert">
                 <a href="Req1.html" target="_blank">
-                    <p><img src="photo1.jpg" alt="" width="300"></p>
+                    <p><img src="photo1.jpg" alt="" width="300" height="200"></p>
                     <p class="descrip">Учитель английского</p>
                 </a>
             </div>
             <div class="all_advert">
-                    <a href="Req2.html" target="_blank">
-                        <p><img src="photo2.jpeg" alt="" width="300"></p>
-                        <p class="descrip">Продается велосипед</p>
-                    </a>
+                <a href="Req2.html" target="_blank">
+                    <p><img src="photo2.jpeg" alt="" width="300" height="200"></p>
+                    <p class="descrip">Продается велосипед</p>
+                </a>
             </div>
             <div class="all_advert">
                 <a href="Req3.html" target="_blank">
-                     <p><img src="photo3.jpg" alt="" width="300"></p>
-                     <p class="descrip">Съем жилья</p>
+                    <p><img src="photo3.jpg" alt="" width="300" height="200"></p>
+                    <p class="descrip">Съем жилья</p>
+                </a>
+            </div>
+            <div class="all_advert">
+                <a href="Req4.html" target="_blank">
+                    <p><img src="photo4.jpg" alt="" width="300" height="200"></p>
+                    <p class="descrip">Отдам кота в добрые руки</p>
                 </a>
             </div>
         </div>
